[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"

[workspace]
members = [
    # "oak_vdom",
    "examples/uibench_ecs",
    # "examples/playground_bare",
    # "examples/playground_ecs",
    # "examples/temp",
    # "examples/hello",
    # "examples/timer",
    # "examples/todomvc",
    # "examples/uibench",
]