[package]
name = "oak"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["browser"]
parallel = [
  "oak_core/parallel",
  "oak_dom/parallel",
  "oak_events/parallel"
]
nightly = [
  "oak_core/nightly",
  "oak_dom/nightly",
  "oak_events/nightly",
]
browser = [
  "oak_dom/browser",
  "oak_events/browser"
]

[dependencies]
oak_core = { path = "../oak_core" }
oak_dom = { path = "../oak_dom" }
oak_events = { path = "../oak_events" }

# lazy_static = "1.1.0"
# hibitset = { version = "0.5", default-features = false }
# shred = { version = "0.7", default-features = false }
# shred-derive = { version = "0.5", default-features = false }
# shrev = { version = "1.0", default-features = false }
# specs = { version = "0.14", default-features = false }
# log = "0.4"
# wasm-bindgen = { version = "0.2", optional = true }
# js-sys = { version = "0.3", optional = true }
# wasm-logger = { version = "0.1", optional = true }

# [dependencies.web-sys]
# version = "0.3"
# optional = true
# features = [
#   'console',
#   'CssStyleDeclaration',
#   'Document',
#   'DocumentFragment',
#   'Element',
#   'Event',
#   'EventListener',
#   'EventTarget',
#   'HtmlElement',
#   'HtmlInputElement',
#   'KeyboardEvent',
#   'MouseEvent',
#   'Node',
#   'NodeList',
#   'Performance',
#   'Text',
#   'Window',
# ]

# [dev-dependencies]
# wasm-bindgen-test = "0.2"
