[package]
name = "oak"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
oak_app = { path = "../oak_app" }
oak_dom_browser = { path = "../oak_dom_browser" }
oak_dom_diff = { path = "../oak_dom_diff" }
oak_dom_node = { path = "../oak_dom_node" }
wasm-bindgen = "0.2"
