[package]
name = "oak"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
oak_browser = { path = "../oak_browser" }
oak_core = { path = "../oak_core" }
oak_diff = { path = "../oak_diff" }
oak_html = { path = "../oak_html" }
oak_time = { path = "../oak_time" }
oak_vdom = { path = "../oak_vdom" }
wasm-bindgen = "0.2"
