[package]
name = "oak_app"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[features]
default = ["browser"]
parallel = [
  "oak_core/parallel",
  "oak_events/parallel"
]
nightly = [
  "oak_core/nightly",
  "oak_events/nightly",
]
browser = [
  "oak_events/browser"
]

[dependencies]
oak_core = { path = "../oak_core" }
oak_events = { path = "../oak_events" }