[package]
name = "oak_browser"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[dependencies]
oak_core = { path = "../oak_core" }
oak_diff = { path = "../oak_diff" }
oak_vdom = { path = "../oak_vdom" }
wasm-bindgen = "0.2"
wasm-logger = { version = "0.1" }

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'CharacterData',
    'Comment',
    'Document',
    'Element',
    'Event',
    'EventTarget',
    'HtmlElement',
    'Text',
    'Node',
    'NodeList',
    'Window',
]