[package]
name = "oak_core"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[features]
default = []
parallel = ["shred/parallel", "hibitset/parallel"]
nightly = ["shred/nightly"]

[dependencies]
hibitset = { version = "0.5", default-features = false }
shred = { version = "0.7", default-features = false }
shred-derive = { version = "0.5", default-features = false }
shrev = { version = "1.0", default-features = false }
specs = { version = "0.14", default-features = false }
