[package]
name = "oak_dom"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[features]
default = ["browser"]
parallel = ["oak_core/parallel"]
nightly = ["oak_core/nightly"]
browser = ["web-sys"]

[dependencies]
oak_core = { path = "../oak_core" }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "Document",
  "Element",
  "Node",
  "Text",
  "Window",
]