[package]
name = "oak_dom_browser"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[dependencies]
oak_dom_diff = { path = "../oak_dom_diff" }
oak_dom_node = { path = "../oak_dom_node" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    'CharacterData',
    'Comment',
    'Document',
    'Element',
    'HtmlElement',
    'Text',
    'Node',
    'NodeList',
    'Window',
]