[package]
name = "oak_ecs"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
generational-arena = "0.2"
anymap = "0.12"

[dependencies.web-sys]
version="0.3"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'DocumentFragment',
  'Element',
  'Event',
  'EventListener',
  'EventTarget',
  'HtmlElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'MouseEvent',
  'Node',
  'NodeList',
  'Performance',
  'Text',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"