[package]
name = "oak_html"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[dependencies]
oak_vdom = { path = "../oak_vdom" }
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    'Event',
    'EventTarget',
    'KeyboardEvent',
]