[package]
name = "oak_http"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[dependencies]
http = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Url",
  "UrlSearchParams",
  "Window",
]