[package]
name = "oak_macros_impl"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "fold"] }
proc-macro2 = { version = "0.4" }
proc-macro-hack = "0.5"
quote = "0.6"
