[package]
name = "oak_macros_impl"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full", "extra-traits"] }
syn_markup = { path = "../syn_markup" }
