[package]
name = "oak"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oak_macros = { path = "../oak_macros" }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
# lalrpop-util = "0.16"
# regex = "0.2"
itertools = "0.7.8"

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Text',
    'Event',
    'EventTarget',
    'Node',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
# criterion = "0.2"

# [build-dependencies]
# lalrpop = "0.16"

[features]
browser = ["wasm-bindgen", "js-sys", "web-sys"]

[[test]]
name = "wasm-bindgen-tests"
path = "tests/wasm_bindgen_tests.rs"
required-features = ["browser"]

# [[bench]]
# name = "benchmarks"
# harness = false