[package]
name = "hello"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
stage0 = { path = "../../crates/stage0" }
wasm-bindgen = { version = "0.2" }

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Text',
    'Node',
    'Window',
    'HtmlTemplateElement'
]