[package]
name = "playground_bare"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"
futures = "0.1"
js-sys = "0.3"
wasm-logger = { version = "0.1" }
log = { version = "0.4" }
lazy_static = "1.3.0"


[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "CharacterData",
    "Comment",
    "console",
    "Document",
    "DocumentFragment",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlTemplateElement",
    "KeyboardEvent",
    "Node",
    "NodeList",
    "Text",
    "Url",
    "UrlSearchParams",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
