[package]
name = "todomvc"
version = "0.1.0"
authors = ["Liam Curry <liam@sagan.software>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
oak = { path = "../../crates/oak" }
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
# specs-hierarchy = "0.3"
console_error_panic_hook = { version = "^0.1.5" }

[dependencies.hibitset]
version = "0.5"
default-features = false

[dependencies.shred]
version = "0.7"
default-features = false
features = [ "nightly" ]

[dependencies.shred-derive]
version = "0.5"
default-features = false

[dependencies.shrev]
version = "1.0"
default-features = false

[dependencies.specs]
version = "0.14"
default-features = false

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Text',
    'Node',
    'Window',
    'InputEvent',
    'Event',
    'EventTarget',
    'HtmlInputElement',
]

# [dependencies.specs]
# git = "https://github.com/slide-rs/specs.git"
# rev = "8e80134"

# default-features = false